--- a/index.html
+++ b/index.html
@@ -17,74 +17,74 @@
 	    </header>
         <main class="content">
 	        <section class="profile">
-				<img src="./images/image.jpg" alt="Фото профеля" class="profile__avatar">
-				<h1 class="profile__user-name">Жак-Ив Кусто</h1>
-				<p class="profile__user-jop">Исследователь океана</p>
-				<button type="button" class="edit-profile profile__edit-profile"></button>
-				<button type="button" class="add-button profile__add-button"></button>
-	        </section>
-	        <ul class="elements">
+				<img src="./images/image.jpg" alt="Фотография для аватарки" class="profile__avatar">
+				<div class="profile__info">
+				  <h1 class="profile__name">Жак-Ив Кусто</h1>
+				  <p class="profile__prof">Исследователь океана</p>
+				  <button class="profile__edit-button" type="button"></button>
+				</div>
+		  		<button class="profile__add-button" type="button"></button>
+			</section>
+			<ul class="elements">
 		        <li class="element">
-			        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото" class="element__photo">
+			        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
 			        <div class="element__block">
 				        <h2 class="element__title">Карачаевск</h2>
-				        <div class="element__icon"></div>
+				        <div class="element__like"></div>
 			        </div>
 		        </li>
 				<li class="element">
-			        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото" class="element__photo">
+			        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
 			        <div class="element__block">
 				        <h2 class="element__title">Гора Эльбрус</h2>
-				        <div class="element__icon"></div>
+				        <div class="element__like"></div>
 			        </div>
 		        </li>
 				<li class="element">
-			        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото" class="element__photo">
+			        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
 			        <div class="element__block">
 				        <h2 class="element__title">Домбай</h2>
-				        <div class="element__icon"></div>
+				        <div class="element__like"></div>
 			        </div>
 		        </li>
 				<li class="element">
-			        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото" class="element__photo">
+			        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
 			        <div class="element__block">
 				        <h2 class="element__title">Гора Эльбрус</h2>
-				        <div class="element__icon"></div>
+				        <div class="element__like"></div>
 			        </div>
 		        </li>
 				<li class="element">
-			        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото" class="element__photo">
+			        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
 			        <div class="element__block">
 				        <h2 class="element__title">Домбай</h2>
-				        <div class="element__icon"></div>
+				        <div class="element__like"></div>
 			        </div>
 		        </li>
 				<li class="element">
-			        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото" class="element__photo">
+			        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
 			        <div class="element__block">
 				        <h2 class="element__title">Карачаево-Черкессия</h2>
-				        <div class="element__icon"></div>
+				        <div class="element__like"></div>
 			        </div>
 		        </li>
 		    </ul>
-        </main>
+		</main>
 	    <footer class="footer">
 		    <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
 	    </footer>
 	    <div class="popup popup_opened">
-		    <form class="popup__container">
-			    <button class="popup__close-button">
-					<img src="./images/Close Icon.png" alt="Закрыть" class="popup__close-icon">
-				</button>
-			    <fieldset class="popup__form">
+		    <div class="popup__container">
+			    <button class="popup__close-button"></button>
+			    <form class="popup__form">
 				    <h3 class="popup__title">Редактировать профиль</h3>
 				    <input type="text" class="popup__name">
-				    <input type="text" class="popup__profession">
+				    <input type="text" class="popup__prof">
 				    <button type="submit" class="popup__save-button">Сохранить</button>
-				</fieldset>
-		    </form>
+				</form>
+		    </div>
 	    </div>
     </div>
-	<script src="index.js"></script>
+	<script src="./index.js"></script>
 </body>
 </html> 
