--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 				<div class="profile__info">
 				  <h1 class="profile__name">Жак-Ив Кусто</h1>
 				  <p class="profile__prof">Исследователь океана</p>
-				  <button class="profile__edit-button" type="button"></button>
+				  <button type="button" class="profile__edit-button"></button>
 				</div>
-		  		<button class="profile__add-button" type="button"></button>
+				
+		  		<button type="button" class="profile__add-button"></button>
 			</section>
 			<ul class="elements">
 		        <li class="element">
