--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Практическая работа 4">
     <meta name="keywords" content="html, css">
     <meta name="author" content="Вадим Ширинга">
-	<link rel="stylesheet" href="./normalize.css">
-    <link rel="stylesheet" href="./index.css">
+	<link rel="stylesheet" href="./pages/index.css">
     <title>Место-Россия</title>
 </head>
 <body>
@@ -86,6 +85,6 @@
 		    </div>
 	    </div>
     </div>
-	<script src="./index.js"></script>
+	<script src="./scripts/index.js"></script>
 </body>
 </html> 
