--- a/index.html
+++ b/index.html
@@ -2,89 +2,90 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Практическая работа 4">
-    <meta name="keywords" content="html, css">
-    <meta name="author" content="Вадим Ширинга">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Практическая работа 4">
+	<meta name="keywords" content="html, css">
+	<meta name="author" content="Вадим Ширинга">
 	<link rel="stylesheet" href="./pages/index.css">
-    <title>Место-Россия</title>
+	<title>Место-Россия</title>
 </head>
 <body>
-    <div class="page">
-	    <header class="header">
-		    <img src="./images/logo.svg" alt="Логотип" class="header__logo">
-	    </header>
-        <main class="content">
-	        <section class="profile">
+	<div class="page">
+		<header class="header">
+			<img src="./images/logo.svg" alt="Логотип" class="header__logo">
+		</header>
+		<main class="content">
+			<section class="profile">
 				<img src="./images/image.jpg" alt="Фотография для аватарки" class="profile__avatar">
 				<div class="profile__info">
-				  <h1 class="profile__name">Жак-Ив Кусто</h1>
-				  <p class="profile__prof">Исследователь океана</p>
-				  <button type="button" class="profile__edit-button"></button>
+					<h1 class="profile__name">Жак-Ив Кусто</h1>
+					<p class="profile__prof">Исследователь океана</p>
+					<button type="button" class="profile__edit-button"></button>
 				</div>
-				
-		  		<button type="button" class="profile__add-button"></button>
+				<button type="button" class="profile__add-button"></button>
 			</section>
-			<ul class="elements">
-		        <li class="element">
-			        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
-			        <div class="element__block">
-				        <h2 class="element__title">Карачаевск</h2>
-				        <div class="element__like"></div>
-			        </div>
-		        </li>
-				<li class="element">
-			        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
-			        <div class="element__block">
-				        <h2 class="element__title">Гора Эльбрус</h2>
-				        <div class="element__like"></div>
-			        </div>
-		        </li>
-				<li class="element">
-			        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
-			        <div class="element__block">
-				        <h2 class="element__title">Домбай</h2>
-				        <div class="element__like"></div>
-			        </div>
-		        </li>
-				<li class="element">
-			        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
-			        <div class="element__block">
-				        <h2 class="element__title">Гора Эльбрус</h2>
-				        <div class="element__like"></div>
-			        </div>
-		        </li>
-				<li class="element">
-			        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
-			        <div class="element__block">
-				        <h2 class="element__title">Домбай</h2>
-				        <div class="element__like"></div>
-			        </div>
-		        </li>
-				<li class="element">
-			        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
-			        <div class="element__block">
-				        <h2 class="element__title">Карачаево-Черкессия</h2>
-				        <div class="element__like"></div>
-			        </div>
-		        </li>
-		    </ul>
+			<section class="elements">
+				<ul class="elements__grid">
+					<li class="element">
+						<img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
+						<div class="element__block">
+							<h2 class="element__title">Карачаевск</h2>
+							<button type="button" class="element__like"></button>
+						</div>
+					</li>
+					<li class="element">
+						<img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
+						<div class="element__block">
+							<h2 class="element__title">Гора Эльбрус</h2>
+							<button type="button" class="element__like"></button>
+						</div>
+					</li>
+					<li class="element">
+						<img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
+						<div class="element__block">
+							<h2 class="element__title">Домбай</h2>
+							<button type="button" class="element__like"></button>
+						</div>
+					</li>
+					<li class="element">
+						<img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
+						<div class="element__block">
+							<h2 class="element__title">Гора Эльбрус</h2>
+							<button type="button" class="element__like"></button>
+						</div>
+					</li>
+					<li class="element">
+						<img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
+						<div class="element__block">
+							<h2 class="element__title">Домбай</h2>
+							<button type="button" class="element__like"></button>
+						</div>
+					</li>
+					<li class="element">
+						<img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
+						<div class="element__block">
+							<h2 class="element__title">Карачаево-Черкессия</h2>
+							<button type="button" class="element__like"></button>
+						</div>
+					</li>
+				</ul>
+			</section>
 		</main>
-	    <footer class="footer">
-		    <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
-	    </footer>
-	    <div class="popup popup_opened">
-		    <div class="popup__container">
-			    <button class="popup__close-button"></button>
-			    <form class="popup__form">
-				    <h3 class="popup__title">Редактировать профиль</h3>
-				    <input type="text" class="popup__name">
-				    <input type="text" class="popup__prof">
-				    <button type="submit" class="popup__save-button">Сохранить</button>
+		<footer class="footer">
+			<p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+		</footer>
+		<div class="popup">
+			<div class="popup__container">
+				<button type="button" class="popup__close-button"></button>
+				<form class="popup__form" name="profile-form">
+					<h2 class="popup__title">Редактировать профиль</h2>
+					<input type="text" class="popup__input popup__input_type_name" name="profile-name" id="popup__name" placeholder="Ваше имя">
+					<input type="text" class="popup__input popup__input_type_prof" name="profile-prof" id="popup__prof" placeholder="Ваше род занятий">
+					<button type="submit" class="popup__save-button">Сохранить</button>
 				</form>
-		    </div>
-	    </div>
-    </div>
+			</div>
+		</div>
+	</div>
 	<script src="./scripts/index.js"></script>
 </body>
 </html> 
