--- a/index.html
+++ b/index.html
@@ -74,16 +74,28 @@
 		<footer class="footer">
 			<p class="footer__copyright">&copy; 2020 Mesto Russia</p>
 		</footer>
-		<div class="popup">
-			<div class="popup__container">
-				<button type="button" class="popup__close-button"></button>
-				<form class="popup__form" name="profile-form">
-					<h2 class="popup__title">Редактировать профиль</h2>
-					<input type="text" class="popup__input popup__input_type_name" name="profile-name" id="popup__name" placeholder="Ваше имя">
-					<input type="text" class="popup__input popup__input_type_prof" name="profile-prof" id="popup__prof" placeholder="Ваше род занятий">
-					<button type="submit" class="popup__save-button">Сохранить</button>
-				</form>
-			</div>
+		
+	</div>
+	<div class="popup popup_type_profile">
+		<div class="popup__container">
+			<button type="button" class="popup__close-button"></button>
+			<form class="popup__form" name="profile-form">
+				<h2 class="popup__title">Редактировать профиль</h2>
+				<input type="text" class="popup__input popup__input_type_name" name="profile-name" placeholder="Ваше имя">
+				<input type="text" class="popup__input popup__input_type_prof" name="profile-prof" placeholder="Ваше род занятий">
+				<button type="submit" class="popup__save-button">Сохранить</button>
+			</form>
+		</div>
+	</div>
+	<div class="popup popup_type_card">
+		<div class="popup__container">
+			<button type="button" class="popup__close-button"></button>
+			<form class="popup__form" name="profile-form">
+				<h2 class="popup__title">Новое место</h2>
+				<input type="text" class="popup__input popup__input_type_name" name="profile-name" placeholder="Название">
+				<input type="url" class="popup__input popup__input_type_prof" name="profile-prof" placeholder="Ссылка на картинку">
+				<button type="submit" class="popup__save-button">Сохранить</button>
+			</form>
 		</div>
 	</div>
 	<script src="./scripts/index.js"></script>
