--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<ul class="elements__grid">
 					<li class="element">
 						<img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
+						<button type="button" class="element__delete"></button>
 						<div class="element__block">
 							<h2 class="element__title">Карачаевск</h2>
 							<button type="button" class="element__like"></button>
@@ -35,6 +36,7 @@
 					</li>
 					<li class="element">
 						<img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
+						<button type="button" class="element__delete"></button>
 						<div class="element__block">
 							<h2 class="element__title">Гора Эльбрус</h2>
 							<button type="button" class="element__like"></button>
@@ -42,6 +44,7 @@
 					</li>
 					<li class="element">
 						<img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
+						<button type="button" class="element__delete"></button>
 						<div class="element__block">
 							<h2 class="element__title">Домбай</h2>
 							<button type="button" class="element__like"></button>
@@ -49,6 +52,7 @@
 					</li>
 					<li class="element">
 						<img src="./images/kirill-pershin-1404681-unsplash.png" alt="фото места" class="element__photo">
+						<button type="button" class="element__delete"></button>
 						<div class="element__block">
 							<h2 class="element__title">Гора Эльбрус</h2>
 							<button type="button" class="element__like"></button>
@@ -56,6 +60,7 @@
 					</li>
 					<li class="element">
 						<img src="./images/kirill-pershin-1556355-unsplash.png" alt="фото места" class="element__photo">
+						<button type="button" class="element__delete"></button>
 						<div class="element__block">
 							<h2 class="element__title">Домбай</h2>
 							<button type="button" class="element__like"></button>
@@ -63,6 +68,7 @@
 					</li>
 					<li class="element">
 						<img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото места" class="element__photo">
+						<button type="button" class="element__delete"></button>
 						<div class="element__block">
 							<h2 class="element__title">Карачаево-Черкессия</h2>
 							<button type="button" class="element__like"></button>
