--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="popup popup_type_card">
 		<div class="popup__container">
 			<button type="button" class="popup__close-button"></button>
-			<form class="popup__form popup__form_type_add" name="profile-form">
+			<form class="popup__form popup__form_type_add" name="add-form">
 				<h2 class="popup__title">Новое место</h2>
 				<input type="text" class="popup__input popup__input_type_title" name="element-title" placeholder="Название" autocomplete="off">
 				<input type="url" class="popup__input popup__input_type_photo" name="element-photo" placeholder="Ссылка на картинку" autocomplete="off">
