fix: оптимизированы функции скриптов

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<h2 class="popup__title">Новое место</h2>
 				<input type="text" class="popup__input popup__input_type_title" name="element-title" placeholder="Название" autocomplete="off">
 				<input type="url" class="popup__input popup__input_type_photo" name="element-photo" placeholder="Ссылка на картинку" autocomplete="off">
-				<button type="submit" class="popup__save-button">Сохранить</button>
+				<button type="submit" class="popup__save-button">Создать</button>
 			</form>
 		</div>
 	</div>
