--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 	<div class="popup popup_type_profile">
 		<div class="popup__container">
 			<button type="button" class="popup__close-button"></button>
-			<form class="popup__form popup__form_type_edit" name="profile-form">
+			<form class="popup__form popup__form_type_edit" name="profile-form" novalidate>
 				<h2 class="popup__title">Редактировать профиль</h2>
-				<input type="text" class="popup__input popup__input_type_name" name="profile-name" placeholder="Ваше имя" autocomplete="off">
-				<input type="text" class="popup__input popup__input_type_prof" name="profile-prof" placeholder="Ваше род занятий" autocomplete="off">
+				<input type="text" class="popup__input popup__input_type_name" name="profile-name" placeholder="Ваше имя" autocomplete="off" minlength="2" maxlength="40" required>
+				<span class="popup__input-error profile-name-error"></span>
+				<input type="text" class="popup__input popup__input_type_prof" name="profile-prof" placeholder="Ваш род занятий" autocomplete="off" minlength="2" maxlength="200" required>
+				<span class="popup__input-error profile-prof-error"></span>
 				<button type="submit" class="popup__save-button">Сохранить</button>
 			</form>
 		</div>
@@ -49,10 +51,12 @@
 	<div class="popup popup_type_card">
 		<div class="popup__container">
 			<button type="button" class="popup__close-button"></button>
-			<form class="popup__form popup__form_type_add" name="add-form">
+			<form class="popup__form popup__form_type_add" name="add-form" novalidate>
 				<h2 class="popup__title">Новое место</h2>
-				<input type="text" class="popup__input popup__input_type_title" name="element-title" placeholder="Название" autocomplete="off">
-				<input type="url" class="popup__input popup__input_type_photo" name="element-photo" placeholder="Ссылка на картинку" autocomplete="off">
+				<input type="text" class="popup__input popup__input_type_title" name="element-title" placeholder="Название картинки" autocomplete="off" minlength="1" maxlength="30" required>
+				<span class="popup__input-error element-title-error"></span>
+				<input type="url" class="popup__input popup__input_type_photo" name="element-photo" placeholder="Ссылка на картинку" autocomplete="off" required>
+				<span class="popup__input-error element-photo-error"></span>
 				<button type="submit" class="popup__save-button">Создать</button>
 			</form>
 		</div>
@@ -74,6 +78,7 @@
 			</div>
 		</li>
 	</template>
+	<script src="./scripts/validate.js"></script>
 	<script src="./scripts/index.js"></script>
 </body>
 </html> 
