--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			</div>
 		</li>
 	</template>
+	<script src="./scripts/config.js"></script>
 	<script src="./scripts/validate.js"></script>
 	<script src="./scripts/index.js"></script>
 </body>
