--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="popup popup_type_card">
 		<div class="popup__container">
 			<button type="button" class="popup__close-button"></button>
-			<form class="popup__form popup__form_type_add" name="add-form" novalidate>
+			<form class="popup__form popup__form_type_add" name="add-form" id="form-add" novalidate>
 				<h2 class="popup__title">Новое место</h2>
 				<input type="text" class="popup__input popup__input_type_title" name="element-title" placeholder="Название картинки" autocomplete="off" minlength="2" maxlength="30" required>
 				<span class="popup__input-error element-title-error"></span>
