--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body>
 	<div class="page">
 		<header class="header">
-			<img src="./images/logo.svg" alt="Логотип" class="header__logo">
+			<img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo">
 		</header>
 		<main class="content">
 			<section class="profile">
-				<img src="./images/image.jpg" alt="Фотография для аватарки" class="profile__avatar">
+				<img src="<%=require('./images/image.jpg')%>" alt="Фотография для аватарки" class="profile__avatar">
 				<div class="profile__info">
 					<h1 class="profile__name">Жак-Ив Кусто</h1>
 					<p class="profile__prof">Исследователь океана</p>
@@ -78,6 +78,6 @@
 			</div>
 		</li>
 	</template>
-	<script type="module" src="./scripts/index.js"></script>
+	<script type="module" src="./pages/index.js"></script>
 </body>
 </html> 
