fix; исправление багов

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Практическая работа 4">
 	<meta name="keywords" content="html, css">
 	<meta name="author" content="Вадим Ширинга">
-	<link rel="stylesheet" href="./pages/index.css">
+	<!--<link rel="stylesheet" href="./pages/index.css">-->
 	<title>Место-Россия</title>
 </head>
 <body>
@@ -103,6 +103,6 @@
 			</div>
 		</li>
 	</template>
-	<script type="module" src="./pages/index.js"></script>
+	<!--<script type="module" src="./pages/index.js"></script>-->
 </body>
 </html> 
